-Wreturn-type warning in SQLiteDatabase.cpp https://bugs.webkit.org/show_bug.cgi?id=228602

Unreviewed, add missing RELEASE_ASSERT_NOT_REACHED().

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-07-29

* platform/sql/SQLiteDatabase.cpp:
(WebCore::checkpointModeValue):

Canonical link: https://commits.webkit.org/240083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280448 268f45cc-cd09-0410-ab3c-d52691b4dbfc